--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
+logging.level.org.springframework=INFO
