--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.format-sql=true
 logging.level.org.springframework=INFO
